# alpca

./: .env.example  .gitignore  CLAUDE.md  README.md  TRADING_POLICY.md  pyproject.toml  requirements.txt
alpca/: __init__.py  cli.py  config.py  envfile.py
data/: composite_signal.json  deployed_book_tail.json  edge_records.json  microstructure_deadbands.json  ofi_deadbands.json  paper_edge_summary.json  xsec_momentum_hardened.json
docs/: AI_RESEARCH_LOOP.docx  AI_RESEARCH_LOOP.md  ARCHITECTURE.md  Alpca_Discovery_and_HFT_Assessment.docx  BASELINE.md  CALIBRATION.md  COMBINATIONS_AND_LOOPS.docx  COMBINATIONS_AND_LOOPS.md  DATA_LOCATIONS.md  EDGE_CASE_STUDIES.docx  EDGE_CASE_STUDIES.md  FINDINGS.docx  FINDINGS.md  GETTING_STARTED_WITH_AI.docx  GETTING_STARTED_WITH_AI.md  PAPER_EDGE.md  PIPELINE_AND_AUTOMATION.docx  PIPELINE_AND_AUTOMATION.md  REALISM.md  RESEARCH_CANDIDATES.docx  RESEARCH_CANDIDATES.md  RESEARCH_PIPELINE.docx  RESEARCH_PIPELINE.md  SECOND_LEG_HUNT.docx  SECOND_LEG_HUNT.md  STATE_OF_THE_PROGRAM.docx  STATE_OF_THE_PROGRAM.md  STRATEGY_TEST_PLAN.docx  STRATEGY_TEST_PLAN.md  SYSTEM_MAP.docx  SYSTEM_MAP.md  TRADING_KNOWLEDGE_COVERAGE.docx  TRADING_KNOWLEDGE_COVERAGE.md  VERIFICATION_CONTROLS.docx  VERIFICATION_CONTROLS.md  _email_body.txt
scripts/: _cmp_pairs_refine.py  _eval_midcap_leg.py  _gauntlet_pairs_midcap_disjoint.py  _hunt_lowbeta.py  _midcap_pairs_cadence_gauntlet.py  adversarial_shortvol.py  ai_research_loop.py  analyze_microstructure.py  analyze_ofi_bars.py  audit_overfit.py  backtest_cached.py  backtest_deployed_portfolio.py  cache_pairs_wf.py  (+87 more)
(+186 files in other folders)
